# pfund-plot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
afterpython/: .pre-commit-config.yaml  README.py  afterpython.toml  authors.yml  ruff.toml
afterpython/_website/src/routes/: +page.svelte
afterpython/blog/: myst.yml
afterpython/doc/: myst.yml
afterpython/docs_OLD/: CONTRIBUTING.md  build.sh  cli_commands.md  layout.ipynb  myst.yml  plot_ideas.md  rendering.ipynb  utils.py
afterpython/docs_OLD/getting-started/: getting-started.md  installation.md
afterpython/example/: myst.yml
afterpython/guide/: myst.yml
afterpython/tutorial/: myst.yml
docs/: CONTRIBUTING.md  build.sh  cli_commands.md  customization.ipynb  layout.ipynb  myst.yml  overview.md  plot_ideas.md  rendering.ipynb  utils.py
docs/getting-started/: getting-started.md
js-tap/: index.html  package.json  pnpm-lock.yaml
js-tap/scripts/: build-components.js  copy-components.js
js-tap/src/: main.ts
js-tap/src/components/candlestick/: CandlestickWrapper.svelte  index.ts
js-tap/src/lightweight-charts/: Candlestick.svelte
js-tap/src/mock/: candlestick.ts
pfund_plot/: DEPRECATED_layout.py  DEPRECATED_renderer.py  DEPRECATED_state.py  __init__.py  __main__.py  _typing.py  config.py  config_handler.py  layout.py  renderer.py  state.py  typing.py
pfund_plot/cli/: main.py
pfund_plot/cli/commands/: config.py  plot.py  serve.py
pfund_plot/cli/commands/gallery/: __init__.py  gallery_marimo.py
pfund_plot/composites/: composite.py
pfund_plot/const/: paths.py
pfund_plot/const/enums/: __init__.py  notebook_type.py
pfund_plot/enums/: __init__.py  dataframe_backend.py  display_mode.py  panel_design.py  panel_theme.py  plotting_backend.py
pfund_plot/mixins/: streaming_market_feed_mixin.py
pfund_plot/overlays/: lazy.py  overlay.py
pfund_plot/overlays/marker/: __init__.py  bokeh.py
pfund_plot/plots/: altair.py  bokeh.py  candlestick.py  control.py  dataframe.py  holoviews.py  lazy.py  matplotlib.py  orderbook.py  plot.py  plotly.py  report.py  streaming.py  style.py  ta.py
pfund_plot/plots/area/: __init__.py  bokeh.py
pfund_plot/plots/bar/: __init__.py  bokeh.py
pfund_plot/plots/candlestick/: __init__.py  _bokeh.py  _svelte.py  bokeh.py  control.py  style.py  svelte.py  widgets.py
pfund_plot/plots/label/: __init__.py  bokeh.py
pfund_plot/plots/layout/: __init__.py  layout.py  panel.py
pfund_plot/plots/layout/tabs/: __init__.py  panel.py
pfund_plot/plots/line/: __init__.py  bokeh.py
pfund_plot/plots/marker/: __init__.py
pfund_plot/plots/scatter/: __init__.py  bokeh.py  marker.py
pfund_plot/renderers/: base.py  browser.py  desktop.py  notebook.py
pfund_plot/templates/: dashboard.py  notebook.py  template.py
pfund_plot/types/: core.py  literals.py
pfund_plot/utils/: __init__.py  bokeh.py  utils.py  validate.py
pfund_plot/widgets/: base.py  datetime_widget.py  ticker_widget.py
src/pfund_plot/: __init__.py  config.py  typing.py
src/pfund_plot/cli/: __init__.py
src/pfund_plot/cli/commands/gallery/: __init__.py  gallery_marimo.py
src/pfund_plot/enums/: panel_design.py  panel_theme.py
src/pfund_plot/js_tap/components/: candlestick.js
src/pfund_plot/plots/: altair.py  bokeh.py  lazy.py  panel.py  plot.py  plotly.py
src/pfund_plot/plots/area/: bokeh.py
src/pfund_plot/plots/candlestick/: __init__.py  svelte.py
src/pfund_plot/plots/label/: bokeh.py
src/pfund_plot/plots/layout/: panel.py
src/pfund_plot/plots/layout/tabs/: panel.py
src/pfund_plot/plots/scatter/: __init__.py  bokeh.py  marker.py
src/pfund_plot/renderers/: base.py  desktop.py  notebook.py
src/pfund_plot/utils/: __init__.py
src/pfund_plot/widgets/: ticker_widget.py
ui/: README-widgets.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vite.widget.config.ts
ui/scripts/: build-widgets.js  widget-entries.js
ui/src/components/tradingview/: Candlestick.svelte
ui/src/routes/candlestick/: +page.svelte
ui/src/widgets/: no_svelte_test.ts
ui/src/widgets/tradingview/candlestick/: CandlestickWrapper.svelte  index.ts
ui/static/: widgets-amd-config.js
