[project]
name = "pfund-plot"
version = "0.0.1.dev3"
description = "A library for financial data visualization, dashboard creation, and template sharing."
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfund-plot@gmail.com"}
]
readme = "README.md"
keywords = ["financial data", "plotting", "dashboards", "charts", "data visualization", "graphs", "plots"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfeed>=0.0.5",
    "panel>=1.8.9",
    "hvplot>=0.12.2",
    "anywidget>=0.9.21",
    "ipywidgets-bokeh>=1.6.0",
    "pywebview>=6.1",
    "datashader>=0.18.2",
]

[project.optional-dependencies]
marimo = [
    "marimo[recommended,lsp]>=0.20.4",
]
jupyter = [
    "jupyter-bokeh>=4.0.5",
    "notebook>=7.5.4",
    "papermill>=2.7.0",
    "voila>=0.5.11",
    # "jupytext>=1.17.2",
]
matplotlib = [
    "matplotlib>=3.10.8", 
    # "mplcursors>=0.7.0",
]
plotly = ["plotly>=6.6.0"]
altair = [
    "altair>=6.0.0",
    "vegafusion>=2.0.3",
]

[dependency-groups]
dev = [
    "afterpython>=0.2.1",
]

[project.scripts]
plt = "pfund_plot.__main__:run_cli"

[project.entry-points."pfund_shell.commands"]
plt = "pfund_plot.cli:pfund_plot_group"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfund-plot"
documentation = "https://pfund-plot-docs.pfund.ai"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
# typeCheckingMode = "basic"
reportAny = false
reportExplicitAny = false
reportUnnecessaryIsInstance = false
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
reportRedeclaration = false
reportUnreachable = false
reportImportCycles = false
reportPrivateUsage = false
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false

[tool.uv.build-backend]
module-name = "pfund_plot"
module-root = ""

[tool.uv.sources]
pfeed = { path = "../pfeed", editable = true }
pfund-kit = { path = "../pfund-kit", editable = true }
