[project]
name = "pfund-plot"
version = "0.0.3"
description = "A library for financial data visualization"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfund-plot@gmail.com"}
]
readme = "README.md"
keywords = ["financial data", "plotting", "dashboards", "charts", "data visualization", "graphs", "plots"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfeed>=0.0.15",
    "panel>=1.9.3",
    "hvplot>=0.12.2",
    "dayplot>=0.5.1",
    "anywidget>=0.11.0 ; sys_platform != 'emscripten'",
    "ipywidgets-bokeh>=1.7.0 ; sys_platform != 'emscripten'",
    "pywebview>=6.2.1 ; sys_platform != 'emscripten'",
    "datashader>=0.19.1 ; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
marimo = ["marimo[recommended,lsp]>=0.23.9"]
jupyter = [
    "jupyter-bokeh>=4.0.5",
    "notebook>=7.5.7",
    "papermill>=2.7.0",
    "voila>=0.5.12",
]
matplotlib = ["matplotlib>=3.10.9"]
plotly = ["plotly>=6.8.0"]
altair = [
    "altair>=6.1.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]

[project.scripts]
plt = "pfund_plot.__main__:run_cli"

[project.entry-points."pfund_shell.commands"]
plt = "pfund_plot.cli:pfund_plot_group"

[project.urls]
homepage = "https://pfund-plot.pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfund-plot"
documentation = "https://pfund-plot.pfund.ai/doc"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
# typeCheckingMode = "basic"
reportAny = false
reportExplicitAny = false
reportUnnecessaryIsInstance = false
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
reportRedeclaration = false
reportUnreachable = false
reportImportCycles = false
reportPrivateUsage = false
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false

[tool.uv.build-backend]
module-name = "pfund_plot"
module-root = "src"
